<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="all_guests">Todos os convidados</string>
    <string name="presents">Presentes</string>
    <string name="Absent">Ausentes</string>
    <string name="name">Nome</string>
    <string name="control_present">Presença</string>
    <string name="present">Presente</string>
    <string name="absent">Ausente</string>
    <string name="save">Salvar</string>
</resources>